		   seeking; similarly warning is issued if a given
	 	   audio object type doesn't support sample accurate
		   seeks (for example mp3 inputs have this limitation)
        - changed: updated ecasound(1) man page description of '-klg'
	- changed: separate global (-d, -R, ...) and ecasound frontend 
		   specific (-c, --daemon, -s, ...) options in 
		   ecasound(1) man page
        - fixed: incorrect usage of the Python C API, which leads to
	 	 segfaults when pyecasound is used under python2.5;
		 fixes Debian bug #468965
        - fixed: bugs in ewf-looping code
	- fixed: avoid terminating processing when invalid parameters are 
		 passed to channel copy (chcopy/erc), mix (chmix/erm) and 
	         move (chmove) chainops
	- fixed: eaim - buffering mode was sometimes incorrectly 
		 reported in 'cs-status' output (-B:auto instead of 
		 the actual set buffering mode) output; bug reported by 
		 Jan Weil
        - fixed: compilation warnings from GCC-4.3; fixes Debian bug
	         #454890, patch from Cyril Brulebois
	- fixed: bug in passing multiple arguments to 'typeselect', 
	         'resample', and 'resample' objects
	- fixed: with some glibc versions (tested with 2.3.6.ds1-13etch5),
		 ecasound did not fully clean up all threads when
		 it received a signal and terminated; the bug showed
	  	 up as a stuck thread, with backtrace pointing to
	  	 pthread_onexit_process()
	- fixed: compilation issue on Mac OS X 10.5 [grobian]
	- fixed: bug in saving control state with 'cs-save' or
	         'cs-save-as'; triggered if controller was followed
		 by more chainops on the same chain
	- fixed: bugs with preserving state across seeks with
	         many controller objects (-kl, -kl2 and -kos)
14082007 (v2.4.6.1) -** stable release **-
 	- fixed: extra debugging, printed to stderr, for resource file 
		 values was accidentally left enabled in the 2.4.6 release
14082007 (v2.4.6)  -** stable release **-
	- added: new option '-R:path-to-resource-file' to use a custom